[package]
name = "pdh-rs"
author = "DuYunis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive"] }
log = "0.4.17"
num_enum = "0.5.11"
simple_logger = "4.1.0"
tokio = { version = "1.26.0", features = ["full"] }

[build-dependencies]
chrono = "0.4.24"
