[package]
name = "pdh-rs"
author = "DuYunis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
byte-unit = "4.0.19"
byteorder = "1.4.3"
clap = { version = "4.1.11", features = ["derive"] }
glob = "0.3.1"
log = "0.4.17"
num_enum = "0.5.11"
pbr = "1.1.1"
serde = { version = "1.0.160", features = ["derive"] }
simple_logger = "4.1.0"
thiserror = "1.0.40"
time = "0.3.20"
tokio = { version = "1.26.0", features = ["full"] }
walkdir = "2.3.3"

[build-dependencies]
chrono = "0.4.24"
